@@ -122,7 +122,7 @@ public class LogResolverBean {
     List<LogDestination> allAppenders = getAllLogDestinations();
 
     if (allAppenders.isEmpty()) {
-      return Collections.emptyList();
+      return List.of();
     }
 
     //
@@ -131,7 +131,7 @@ public class LogResolverBean {
     List<LogDestination> uniqueList = new LinkedList<>();
     AbstractLogComparator cmp = new LogDestinationComparator(all);
 
-    Collections.sort(allAppenders, cmp);
+    allAppenders.sort(cmp);
     for (LogDestination dest : allAppenders) {
       if (Collections.binarySearch(uniqueList, dest, cmp) < 0
           && (all || dest.getFile() == null || dest.getFile().exists())) {
@@ -171,7 +171,7 @@ public class LogResolverBean {
     if (!allAppenders.isEmpty()) {
       AbstractLogComparator cmp = new LogSourceComparator();
 
-      Collections.sort(allAppenders, cmp);
+      allAppenders.sort(cmp);
       for (LogDestination dest : allAppenders) {
         if (Collections.binarySearch(sources, dest, cmp) < 0) {
           sources.add(new DisconnectedLogDestination().builder(dest));
@@ -188,7 +188,7 @@ public class LogResolverBean {
    */
   private List<LogDestination> getAllLogDestinations() {
     if (!Instruments.isInitialized()) {
-      return Collections.emptyList();
+      return List.of();
     }
 
     List<LogDestination> allAppenders = new ArrayList<>();
@@ -266,8 +266,13 @@ public class LogResolverBean {
         ClassLoader cl;
         ClassLoader prevCl = null;
         if (ctx != null) {
-          cl = ctx.getLoader().getClassLoader();
-          prevCl = ClassUtils.overrideThreadContextClassLoader(cl);
+          Loader ctxLoader = ctx.getLoader();
+          cl = ctxLoader != null ? ctxLoader.getClassLoader() : null;
+          if (cl != null) {
+            prevCl = ClassUtils.overrideThreadContextClassLoader(cl);
+          } else {
+            cl = Thread.currentThread().getContextClassLoader().getParent();
+          }
         } else {
           cl = Thread.currentThread().getContextClassLoader().getParent();
         }
@@ -306,7 +311,12 @@ public class LogResolverBean {
    */
   private void interrogateContext(Context ctx, List<LogDestination> allAppenders) {
     Application application = ApplicationUtils.getApplication(ctx, getContainerWrapper());
-    ClassLoader cl = ctx.getLoader().getClassLoader();
+    Loader loader = ctx.getLoader();
+    if (loader == null) {
+      logger.debug("Context {} has no loader, skipping classloader interrogation", ctx.getName());
+      return;
+    }
+    ClassLoader cl = loader.getClassLoader();
     Object contextLogger = ctx.getLogger();
     if (contextLogger != null) {
       if (contextLogger.getClass().getName().startsWith("org.apache.commons.logging")) {
