@@ -12,7 +12,6 @@ package psiprobe.model.jmx;
 
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 
 /**
@@ -206,7 +205,7 @@ public class Cluster {
    * @return the members
    */
   public List<ClusterSender> getMembers() {
-    return members == null ? Collections.emptyList() : new ArrayList<>(members);
+    return members == null ? List.of() : new ArrayList<>(members);
   }
 
   /**
@@ -215,7 +214,7 @@ public class Cluster {
    * @param members the new members
    */
   public void setMembers(Collection<ClusterSender> members) {
-    this.members = members == null ? Collections.emptyList() : new ArrayList<>(members);
+    this.members = members == null ? List.of() : new ArrayList<>(members);
   }
 
   /**
